--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <title>Doomix Template</title>
+        <title>United Core System</title>
         <meta name="description" content="">
 		<!-- Mobile Specific Meta -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -32,17 +32,17 @@
         <aside class="left-sidebar">
             <div class="logo">
                 <a href="#welcome">
-                    <h1>Doomix</h1>
+                    <h1>United Core System</h1>
                 </a>
             </div>
             <nav class="left-nav">
                 <ul id="nav">
                     <li class="current"><a href="#welcome">Welcome</a></li>
-                    <li><a href="#installation">Installation</a></li>
-                    <li><a href="#tmpl-structure">Structure</a></li>
-                    <li><a href="#css-structure">CSS Files</a></li>
-                    <li><a href="#javascript">JavaScript Libraries</a></li>
-                    <li><a href="#credit">Source and Credit</a></li>
+                    <li><a href="#installation">Orientation</a></li>
+                    <li><a href="#tmpl-structure">Registration</a></li>
+                    <li><a href="#css-structure">Bootcamp</a></li>
+                    <li><a href="#javascript">Labs & Practicals</a></li>
+                    <li><a href="#credit">Resume Preparation</a></li>
                 </ul>
             </nav>
         </aside>
@@ -51,11 +51,11 @@
 		    <div class="main-content">
 		        <section id="welcome">
 		            <div class="content-header">
-		                <h1>Doomix - ICO App & Crypto Wallet Mobile Template</h1>
+		                <h1>United Core Systems - Changing livies and enpowering the youth with DevOps / Cloud computing  </h1>
 		            </div>
 		            <div class="welcome">
                         
-                        <h2 class="twenty">Welcome To Doomix Template</h2>
+                        <h2 class="twenty">Welcome To Bootcamp 2023</h2>
 
                         <p>Firstly, a huge Thanks for purchasing this theme, your support is truly appreciated!</p>
 
