added more content to the Bootcamp session

--- a/index.html
+++ b/index.html
@@ -135,8 +135,30 @@
                     <div class="content-header">
 		                <h1>Bootcamp</h1>
                     </div>
-                    <h>
+					<h2 class="title">Program Outline</h2>
+                    <div class="section-content">
+                        <ol>
+                            <li> <strong>Computer Basics</strong> - Computers, Hardware, Software, Operating systems, networking, internet and web browsers</li>
+                            <li> <strong>SDLC</strong> - Waterfall, Agile , Lean and DevOps Methodologies</li>
+                            <li> <strong>Cloud Computing</strong> - Introduction, Cloud Models , Cloud providers </li>
+                            <li> <strong>Linux</strong> - Installation, Command Line Interface (CLI), Linux Commands and Hands-on Practice</li>
+                            <li><strong>GIT & GitHub</strong> - Introduction VCS and SCM, Git Basics 1 (Setup, Installation and Configuration) and 2 ( Git Repo, tracking and view)</li>
+							<li> <strong>Apache HTTP</strong> - (httpd) - Introduction & installation of hhttpd web server </li>
+							<li> <strong>Maven</strong> - Introduction & installation, structure & life cycle, Project Object Model (POM), dependencies & Repositories Plugins, Build profiles,  archetypes, Multi– module, Best Practices, Projects  </li>
+                            <li> <strong>SonarQube</strong> - Introduction & installation , Architecture, Project, quality gate and profile, troubleshooting and best practices</li>
+                            <li> <strong>Nexus / Jfrog</strong> - Introduction to artifactory </li>
+                            <li> <strong>Docker</strong> - Installation, Command Line Interface (CLI), Linux Commands and Hands-on Practice</li>
+                            <li><strong>Jenkins</strong> - Introduction VCS and SCM, Git Basics 1 (Setup, Installation and Configuration) and 2 ( Git Repo, tracking and view)</li>
+							<li> <strong>AWS</strong> - Introduction & installation , Architecture, Project, quality gate and profile, troubleshooting and best practices</li>
+                            <li> <strong>Terraform</strong> - Introduction to artifactory </li>
+                            <li> <strong>Ansible</strong> - Installation, Command Line Interface (CLI), Linux Commands and Hands-on Practice</li>
+                            <li><strong>Prometheus</strong> - Introduction VCS and SCM, Git Basics 1 (Setup, Installation and Configuration) and 2 ( Git Repo, tracking and view)</li>
+							<li> <strong>Grafana</strong> - Introduction to artifactory </li>
+                            <li> <strong>Python</strong> - Installation, Command Line Interface (CLI), Linux Commands and Hands-on Practice</li>                        
+						</ol>
+                    </div>
 
+					<h2 class="title">Career Path</h2>
                     <div class="section-content">
                         <ol>
                             <li> <strong>Introduction</strong> - About us, History, Mission and Vision statement, Our Team & what and why devops</li>
