added more content to the Bootcamp session again

--- a/index.html
+++ b/index.html
@@ -168,6 +168,17 @@
                             <li><strong>Resume & Interview Prep</strong> -  LinkedIn review, resume and interview preparation</li>
                         </ol>
                     </div>
+
+					<h2 class="title">Learning Resources</h2>
+                    <div class="section-content">
+                        <ol>
+                            <li> <strong>Pluralsight</strong> - About us, History, Mission and Vision statement, Our Team & what and why devops</li>
+                            <li> <strong>A Cloud Guru</strong> - Program details , Duration, Courses modules and introduction to DevOps Tools</li>
+                            <li> <strong>Amazon Web Services</strong> - From Zero to hero testimony of Uber drivers, factory workers, undocumented individuals and their journey to financial freedom </li>
+                            <li> <strong>Azure</strong> - Career paths and development with online cloud technology platforms</li>
+                            <li><strong>Google Cloud Platform</strong> -  LinkedIn review, resume and interview preparation</li>
+                        </ol>
+                    </div>
 		            
 		        </section>
 
