added more content to the Bootcamp session again

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         
                         <h2 class="twenty">Welcome To United Core System</h2>
 
-                        <p>Thank you for participating in our program today, we truly appreciate you been here!</p>
+                        <p>Thank you for participating in our program today, we truly appreciate you being here!</p>
 						</br>
                         <p>Welcome to the DevOps/Cloud Computing Program!  This program is designed to merge the principles of DevOps with the expansive capabilities of cloud computing. As a participant:
 							you will learn basic installation and use of DeveOps tools from the planning staged to the deploying of sowftware application to into the cloud, We will also troubleshot as often as to reveal answers to common problems and issues - this document is a guide to assist you if you are experiencing any difficulties. If you have any questions that are beyond the scope of this document, feel free to email at <a href="mailto:info@unicoresystem">info@unicoresystem</a></p>
@@ -161,11 +161,16 @@
 					<h2 class="title">Career Path</h2>
                     <div class="section-content">
                         <ol>
-                            <li> <strong>Introduction</strong> - About us, History, Mission and Vision statement, Our Team & what and why devops</li>
-                            <li> <strong>Program Overview</strong> - Program details , Duration, Courses modules and introduction to DevOps Tools</li>
-                            <li> <strong>Guest Speakers</strong> - From Zero to hero testimony of Uber drivers, factory workers, undocumented individuals and their journey to financial freedom </li>
-                            <li> <strong>Certification & Career Growth</strong> - Career paths and development with online cloud technology platforms</li>
-                            <li><strong>Resume & Interview Prep</strong> -  LinkedIn review, resume and interview preparation</li>
+                            <li> <strong>Linux Adminstrator</strong> - About us, History, Mission and Vision statement, Our Team & what and why devops</li>
+							<li> <strong>System Adminstrator</strong> -  LinkedIn review, resume and interview preparation</li>
+                            <li> <strong>Build and Realese Engineer</strong> - Program details , Duration, Courses modules and introduction to DevOps Tools</li>
+                            <li> <strong>Platform Engineer</strong> - From Zero to hero testimony of Uber drivers, factory workers, undocumented individuals and their journey to financial freedom </li>
+							<li> <strong>DevOps Engineer</strong> - About us, History, Mission and Vision statement, Our Team & what and why devops</li>
+                            <li> <strong>Infrastructure Engineer</strong> - Career paths and development with online cloud technology platforms</li>
+                            <li> <strong>Site Reliability Engineer</strong> - From Zero to hero testimony of Uber drivers, factory workers, undocumented individuals and their journey to financial freedom </li>
+                            <li> <strong>Solution Architect</strong> -  LinkedIn review, resume and interview preparation</li>
+                            <li> <strong>Cloud Architect</strong> - Program details , Duration, Courses modules and introduction to DevOps Tools</li>
+							<li> <strong>DevSecOps</strong> - Career paths and development with online cloud technology platforms</li>
                         </ol>
                     </div>
 
