--- a/index.html
+++ b/index.html
@@ -337,6 +337,17 @@
 							Elevate your professional presentation with a LinkedIn review, resume refinement, and comprehensive interview preparation tailored to the competitive landscape of cloud technology.
                         </ol>
                     </div>
+
+				</div>
+				<h2 class="title">Instance info</h2>
+				<div class="section-content">
+					<ol>
+						Instance Id --> $META_INST_ID
+						Instance Type --> $META_INST_TYPE
+						Availability zone --> $META_INST_AZ
+					</ol>
+				</div>
+
 		        </section>
 		        
 		    </div>
