--- a/index.html
+++ b/index.html
@@ -338,15 +338,16 @@
                         </ol>
                     </div>
 
-				</div>
+				
 				<h2 class="title">Instance info</h2>
 				<div class="section-content">
 					<ol>
-						Instance Id --> $META_INST_ID
-						Instance Type --> $META_INST_TYPE
-						Availability zone --> $META_INST_AZ
+						$META_INST_ID
+						$META_INST_TYPE
+						$META_INST_AZ
 					</ol>
 				</div>
+			</div>
 
 		        </section>
 		        
