--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		        <section id="welcome">
 		            <div class="content-header">
 		                <h1>United Core Systems  </h1> </br>
-						<h4>2024 DevOps / Cloud Computing Bootcamp</h4>
+						<h4>2024 DevOps / Cloud Computing Bootcamp Class</h4>
 
 		            </div>
 		            <div class="welcome">
